--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ body {
   
   /* Hero Section */
   .hero {
-    background: url('https://upload.wikimedia.org/wikipedia/commons/1/1e/Tokyo_Montage_2021.png') center/cover no-repeat;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
+    background: url('https://upload.wikimedia.org/wikipedia/commons/b/b2/Skyscrapers_of_Shinjuku_2009_January.jpg') center/cover no-repeat;
     color: white;
     padding: 6rem 2rem;
     text-align: center;
