--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,15 @@ body {
     padding: 2rem;
     max-width: 900px;
     margin: auto;
+    /* for smoot scales */
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.6s ease-out;
+  }
+  
+  section.visible {
+    opacity: 1;
+    transform: translateY(0);
   }
   
   h2 {
