--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,10 @@ body {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   }
   
+  .boxCfp {
+    border: 2px solid #ffa011; 
+    padding: 10px 10px 1px 25px; 
+    margin: 30px;
+    border-radius: 5px; 
+    background-color: rgba(192, 192, 192, 0.2);
+  }
