--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,11 @@ body {
     border-radius: 5px; 
     background-color: rgba(192, 192, 192, 0.2);
   }
+
+  .announcement {
+    border: 5px solid #ff0000; 
+    padding: 10px 10px 1px 25px; 
+    margin: 30px;
+    border-radius: 5px; 
+    background-color: rgba(192, 192, 192, 0.2);
+  }
